--- a/styling/style.css
+++ b/styling/style.css
@@ -1,3 +1,11 @@
+body, html {
+  height: 50%;
+}
+
+.top {
+  background-image: url("https://images.unsplash.com/photo-1521805103424-d8f8430e8933?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+}
+
 #visualizer{
   border: solid 1px black;  
 }
