--- a/styling/style.css
+++ b/styling/style.css
@@ -4,12 +4,40 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
+  font-family: Arial Black;
+}
+
+h1 {
+  color:white;
+  font-size: 3rem;
+  -webkit-text-stroke-width: 0.15rem;
+  -webkit-text-stroke-color: black;
+}
+
+h2 {
+  color:white;
+  font-size: 2rem;
+  -webkit-text-stroke-width: 0.1rem;
+  -webkit-text-stroke-color: black;
 }
 
 ul {
+  padding-top:1px;
+  padding-left: 1px;
+  padding-right: 1px;
   font-size: 1.1rem;
+  color: white;
+  -webkit-text-stroke-width: 0.07rem;
+  -webkit-text-stroke-color: black;
 }
 
-#visualizer{
+#visualizer {
   border: solid 1px black;  
+}
+
+#weight-inputs {
+  font-size: 1.3rem;
+  color:white;
+  -webkit-text-stroke-width: 0.08rem;
+  -webkit-text-stroke-color: black;
 }
