--- a/styling/style.css
+++ b/styling/style.css
@@ -25,7 +25,7 @@ i:hover {
 }
 
 #visualizer {
-  border: solid 1px black;  
+  border: solid 3px black;  
 }
 
 #weight-inputs {
@@ -37,6 +37,7 @@ i:hover {
 
 #how-to {
   display: block;
+  border: solid 3px;
   margin-top: auto;
   margin-left: auto;
   margin-right: auto;
